Description : modification login layout Bug ID: NA Reviewed By: Sanjay

--- a/technical/src/apps/user/patientcare/src/app.css
+++ b/technical/src/apps/user/patientcare/src/app.css
@@ -112,7 +112,7 @@ components that have the btn class name.
 FlexboxLayout {
   align-items: center;
   background-size: cover;
-  background-color: #396766
+  /* background-color: #396766; */
 }
 
 Button, TextField {
